--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <h2>About Us</h2>
         <p>
             Welcome to our demo website. We aim to create an exceptional experience for our users, offering a range of 
-            services designed to meet your needs. Explore our site to learn more about what we offer.
+            services designed to meet your needs. Explore our site to learn more about what we offer...
         </p>
         <a href="#" class="btn">Get Started</a>
         
@@ -178,4 +178,5 @@
         setInterval(nextSlide, 3000);
     </script>
 </body>
+
 </html>
